select com campeões e timer básico com tempo do flash

--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "calculate-spell-time",
   "version": "1.0.0",
-  "description": "",
   "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -14,6 +13,18 @@
     "electron": "^12.0.0"
   },
   "dependencies": {
-    "lol-champions": "^10.23.1"
-  }
+    "lol-champions": "^10.23.1",
+    "bootstrap": "^4.1.3",
+    "jquery": "^3.3.1",
+    "popper.js": "^1.14.4"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/GabrielH9981/calculate-spell-time.git"
+  },
+  "bugs": {
+    "url": "https://github.com/GabrielH9981/calculate-spell-time/issues"
+  },
+  "homepage": "https://github.com/GabrielH9981/calculate-spell-time#readme",
+  "description": ""
 }
