--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "electron": "^12.0.0"
   },
   "dependencies": {
-    "lol-champions": "^10.23.1",
-    "bootstrap": "^4.1.3",
+    "bootstrap": "^5.0.0-beta2",
     "jquery": "^3.3.1",
+    "lol-champions": "^10.23.1",
     "popper.js": "^1.14.4"
   },
   "repository": {
